# bspctl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
docs/: bitbake-override.md  build.md  clean-sstate.md  clean.md  configuration.md  diff.md  doctor.md  dump.md  for-all.md  gen-kas.md  hashserv.md  index.md  layers.md  lock.md  log.md  prefetch.md  report.md  run.md  settings.md  shell.md  stress-parse.md  sync.md  triage.md  workspace.md
examples/: config.toml  kas-am62x-var-som.yml  kas-imx95-var-dart.yml  kas-qemux86-64-wrynose.yml
examples/bbsetup-oe-nodistro-wrynose/: .gitignore
examples/bbsetup-oe-nodistro-wrynose/config/: config-upstream.json  sources-fixed-revisions.json
overlays/: bspctl-tuning-generic.yml  bspctl-tuning-nxp.yml  bspctl-tuning-ti.yml  varis-tuning-generic.yml  varis-tuning-nxp.yml  varis-tuning-ti.yml
scripts/: blog-ablation-table.py  release.sh  run-ablation-matrix.sh
src/bspctl/: __init__.py  __main__.py  bsp_detect.py  bsp_model.py  cli.py  config.py  diagnostics.py  fork_race_signatures.py  hashserv.py  kas.py  layers.py  manifest_diff.py  observability.py  report.py  triage.py  user_config.py  vendor_config.py  workspace.py
src/bspctl/commands/: _app.py  build.py  clean.py  clean_sstate.py  diff.py  doctor.py  dump.py  for_all.py  gen_kas.py  hashserv.py  lock.py  log.py  override.py  prefetch.py  report.py  shell.py  stress_parse.py  sync.py  triage.py
src/bspctl/overlays/: bspctl-tuning-generic.yml  bspctl-tuning-hashequiv.yml  bspctl-tuning-nxp.yml  bspctl-tuning-ti.yml
src/bspctl/steps/: __init__.py  bitbake_override.py  kas_build.py  repo.py  run_qemu.py  setup_env.py  stress_parse.py  ti_layertool.py  ti_setup_env.py
src/varis_build/: __main__.py  bsp_detect.py  diagnostics.py  fork_race_signatures.py  triage.py  workspace.py
src/varis_build/steps/: bitbake_override.py  kas_build.py  setup_env.py  ti_layertool.py  ti_setup_env.py
tests/: test_bbsetup.py  test_bbsetup_config.py  test_bitbake_override.py  test_bsp_detect.py  test_bsp_model.py  test_cli_build_host.py  test_cli_build_yaml.py  test_cli_diff.py  test_cli_dump.py  test_cli_hashserv.py  test_cli_layers.py  test_cli_lock.py  test_cli_prefetch.py  test_cli_report.py  test_cli_user_config.py  test_diagnostics.py  test_env_precedence.py  test_example_kas_wrynose.py  test_fork_race_signatures.py  test_hashserv.py  test_kas_env.py  test_kas_generation.py  test_manifest_diff.py  test_overlay_yaml.py  test_report.py  test_run_build_host.py  test_run_qemu.py  test_stress_parse.py  test_ti_branch_inference.py  test_user_config.py  test_vendor_config.py  test_workspace_detection.py  test_workspace_state.py
