[project]
name = "bspctl"
version = "0.4.0"
description = "kas wrapper for Yocto BSP builds - repo tool sync, pre-flight checks, triage"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Javier Tia" }]
keywords = [
  "bitbake",
  "bsp",
  "embedded",
  "imx",
  "kas",
  "nxp",
  "ti-sitara",
  "yocto"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Operating System Kernels :: Linux",
]
dependencies = [
  "pyyaml>=6.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/jetm/bspctl/issues"
Homepage = "https://github.com/jetm/bspctl"
Repository = "https://github.com/jetm/bspctl"

[project.scripts]
bspctl = "bspctl.cli:app"

[dependency-groups]
dev = [
  "bump-my-version",
  "pre-commit",
  "pytest>=9",
  "pytest-cov>=6",
  "pytest-randomly",
  "pytest-timeout",
  "ruff",
  "ty",
]

[build-system]
requires = ["uv_build>=0.6,<0.13"]
build-backend = "uv_build"

[tool.bumpversion]
current_version = "0.4.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"
pre_commit_hook = "uv sync && git add uv.lock"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/bspctl/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"

[tool.coverage.run]
source = ["bspctl"]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__",
  "@overload",
]

[tool.pytest.ini_options]
addopts = ["-v", "--tb=short"]
markers = [
  "unit: fast hermetic tests with no external tools or services",
  "integration: tests requiring external tools or services",
]
pythonpath = ["src"]
testpaths = ["tests"]
timeout = 30

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # Pyflakes
  "I",  # isort
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "TC",  # flake8-type-checking
]
ignore = [
  "SIM102",  # Use single if statement - often reduces readability
  "SIM105",  # Use contextlib.suppress - adds import for minimal benefit
  "SIM108",  # Use ternary operator - can reduce readability for complex conditions
  "SIM110",  # Use any() instead of for loop - sometimes less clear
]

[tool.ruff.lint.isort]
known-first-party = ["bspctl"]

[tool.ruff.lint.per-file-ignores]
"src/bspctl/cli.py" = ["B008"]
# Typer evaluates annotations at runtime via inspect.signature(eval_str=True);
# Path and other stdlib types used in command signatures must not be TYPE_CHECKING-guarded.
"src/bspctl/commands/*.py" = ["TC003"]

[tool.ty.rules]
# Noisy without full type annotations - project uses gradual typing
call-non-callable = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
invalid-type-form = "ignore"
no-matching-overload = "ignore"
not-subscriptable = "ignore"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "bspctl"
module-root = "src"
